--- a/bundle.yaml
+++ b/bundle.yaml
@@ -2,10 +2,14 @@ description: A charm bundle to deploy MetalLB in Kubernetes
 bundle: kubernetes
 applications:
   metallb-controller:
-    # source: ../charm-metallb-controller/.build/metallb-controller.charm
-    charm: ../charm-metallb-controller/.build/metallb-controller.charm
+    charm: ./charms/metallb-controller/.build/metallb-controller.charm
+    # charm: cs:~charmed-kubernetes/metallb-controller
+    source: ./charms/metallb-controller
     scale: 1
+    options:
+      iprange: "192.168.1.88-192.168.1.89"
   metallb-speaker:
-    # source: ../charm-metallb-speaker/.build/metallb-speaker.charm
-    charm: ../charm-metallb-speaker/.build/metallb-speaker.charm
+    charm: ./charms/metallb-controller/.build/metallb-controller.charm
+    # charm: cs:~charmed-kubernetes/metallb-speaker
+    source: ./charms/metallb-speaker
     scale: 1
