--- a/charms/metallb-controller/config.yaml
+++ b/charms/metallb-controller/config.yaml
@@ -13,9 +13,8 @@ options:
       local network directly, to give the machine's MAC address to clients.
   iprange:
     type: string
-    default:
+    default: "192.168.1.240-192.168.1.250"
     description: |
       For the Layer 2 Configuration only. This is the IP range from which MetalLB
       will have control over and choose IPs from to distribute to kubernetes services requesting an external IP of type Load Balancer. 
       Format of the range (no spaces): "192.168.1.240-192.168.1.250"
-    
