fix error, each charm deployed once

--- a/bundle.yaml
+++ b/bundle.yaml
@@ -9,7 +9,7 @@ applications:
     options:
       iprange: "192.168.1.88-192.168.1.89"
   metallb-speaker:
-    charm: ./charms/metallb-controller/.build/metallb-controller.charm
+    charm: ./charms/metallb-speaker/.build/metallb-speaker.charm
     # charm: cs:~charmed-kubernetes/metallb-speaker
     source: ./charms/metallb-speaker
     scale: 1
