Add unit tests for metallb controller

--- a/charms/metallb-controller/tox.ini
+++ b/charms/metallb-controller/tox.ini
@@ -9,16 +9,16 @@ basepython = python3
 setenv =
   PYTHONPATH = {toxinidir}/lib/:{toxinidir}
   CHARM_BUILD_DIR = {toxinidir}/.build
-  CHARM_NAME = metallb
+  CHARM_NAME = iscsi-connector
 passenv = 
     HOME
     CHARM_BUILD_DIR
     CHARM_NAME
 whitelist_externals = charmcraft
 
-; [testenv:build]
-; basepython = python3
-; commands = charmcraft build
+[testenv:build]
+basepython = python3
+commands = charmcraft build
 
 [testenv:unit]
 commands = 
@@ -28,7 +28,7 @@ commands =
     coverage html -d cover
     coverage xml -o cover/coverage.xml
     coverage report
-deps = -r{toxinidir}/tests/unit/requirements.txt
+deps = -r{toxinidir}/tests/requirements.txt
        -r{toxinidir}/requirements.txt
 setenv = 
      {[testenv]setenv}
