keep tox only, get rid of Makefile

--- a/charms/metallb-controller/tox.ini
+++ b/charms/metallb-controller/tox.ini
@@ -9,16 +9,21 @@ basepython = python3
 setenv =
   PYTHONPATH = {toxinidir}/lib/:{toxinidir}
   CHARM_BUILD_DIR = {toxinidir}/.build
-  CHARM_NAME = iscsi-connector
+  CHARM_NAME = metallb-controller
 passenv = 
     HOME
     CHARM_BUILD_DIR
     CHARM_NAME
-whitelist_externals = charmcraft
+whitelist_externals = 
+    charmcraft
+    /usr/bin/mv
+    /usr/bin/mkdir
 
 [testenv:build]
 basepython = python3
-commands = charmcraft build
+commands = 
+    charmcraft build
+    mv metallb-controller.charm build/
 
 [testenv:unit]
 commands = 
