fix order of patch objects

--- a/charms/metallb-controller/tox.ini
+++ b/charms/metallb-controller/tox.ini
@@ -17,7 +17,6 @@ passenv =
 whitelist_externals = 
     charmcraft
     /usr/bin/mv
-    /usr/bin/mkdir
 
 [testenv:build]
 basepython = python3
@@ -28,7 +27,7 @@ commands =
 [testenv:unit]
 commands = 
     coverage erase
-    stestr run --slowest {posargs}
+    stestr run --slowest --test-path=./tests --top-dir=./
     coverage combine
     coverage html -d cover
     coverage xml -o cover/coverage.xml
