replace makefile by tox actions

--- a/tox.ini
+++ b/tox.ini
@@ -14,35 +14,20 @@ passenv =
     HOME
     CHARM_BUILD_DIR
     CHARM_NAME
-whitelist_externals = charmcraft
+whitelist_externals = 
+    charmcraft
+    /usr/bin/mv
+    /usr/bin/echo
 
-; [testenv:build]
-; basepython = python3
-; commands = charmcraft build
-
-[testenv:unit]
+[testenv:build]
+basepython = python3
 commands = 
-    coverage erase
-    stestr run --slowest {posargs}
-    coverage combine
-    coverage html -d cover
-    coverage xml -o cover/coverage.xml
-    coverage report
-deps = -r{toxinidir}/tests/unit/requirements.txt
-       -r{toxinidir}/requirements.txt
-setenv = 
-     {[testenv]setenv}
-     PYTHON=coverage run
-
-[coverage:run]
-branch = True
-concurrency = multiprocessing
-parallel = True
-source = 
-    .
-omit = 
-    .tox/*
-    tests/*
+    charmcraft build --from charms/metallb-controller
+    mv metallb-controller.charm charms/metallb-controller/build/.
+    charmcraft build --from charms/metallb-speaker
+    mv metallb-speaker.charm charms/metallb-speaker/build/.
+    echo "Built charms are located in charms/metallb-controller/build/" \
+        "and charms/metallb-speaker/build. Happy charming!"
 
 [testenv:func]
 changedir = {toxinidir}/tests/functional
