Changes for code-review
* changes from code review https://github.com/charmed-kubernetes/metallb-operator/pull/1

* get all tests into one workflow

* remove unused sections of tox

* fix modified function name for bind_role

* add unit test in github actions

* test with github action tox-gh-actions

* full exec path for tox

* setup python to be able to use tox, following https://docs.github.com/en/actions/guides/building-and-testing-python#running-tests-with-tox

* syntax

* add unit tests for metallb-speaker and test failure

* re-add path

* restore original pythonpath setting

* remove extra stuff from tox.ini

--- a/.github/workflows/metallb-workflow.yaml
+++ b/.github/workflows/metallb-workflow.yaml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   lint:
-    name: Check pep8 formatting
+    name: Check PEP8 formatting
     runs-on: ubuntu-latest
     steps:
     - name: Check out code
@@ -23,11 +23,53 @@ jobs:
         use-isort: false
         extra-flake8-options: "--max-line-length=88 --max-complexity=10"
 
+  unit-test-metallb-controller:
+    name: Unit tests for charm metallb-controller
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python: [3.7, 3.8]
+    steps:
+    - name: Check out code
+      uses: actions/checkout@v2
+    - name: Setup Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: ${{ matrix.python }}
+    - name: Install dependencies
+      run: |
+        pip install tox
+    - name: Run unit tests with tox
+      run: |
+        cd charms/metallb-controller
+        tox -e unit
+  
+  unit-test-metallb-speaker:
+    name: Unit tests for charm metallb-speaker
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python: [3.7, 3.8]
+    steps:
+    - name: Check out code
+      uses: actions/checkout@v2
+    - name: Setup Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: ${{ matrix.python }}
+    - name: Install dependencies
+      run: |
+        pip install tox
+    - name: Run unit tests with tox
+      run: |
+        cd charms/metallb-speaker
+        tox -e unit
+
   func-test-metallb:
     runs-on: ubuntu-latest
     name: Functional test MetalLB
     timeout-minutes: 10
-    needs: lint
+    needs: [lint, unit-test-metallb-controller, unit-test-metallb-speaker]
     steps:
     - name: Check out code
       uses: actions/checkout@v2
