Use an oci-image resource for container images
* changes from code review https://github.com/charmed-kubernetes/metallb-operator/pull/1

* get all tests into one workflow

* remove unused sections of tox

* fix modified function name for bind_role

* add unit test in github actions

* test with github action tox-gh-actions

* full exec path for tox

* setup python to be able to use tox, following https://docs.github.com/en/actions/guides/building-and-testing-python#running-tests-with-tox

* syntax

* add unit tests for metallb-speaker and test failure

* re-add path

* restore original pythonpath setting

* remove extra stuff from tox.ini

* use oci_image

* set requirement as zip, otherwise it fails to download in the github actions

* add resources to github action deploy

* at cli, resource is singular

--- a/.github/workflows/metallb-workflow.yaml
+++ b/.github/workflows/metallb-workflow.yaml
@@ -106,8 +106,8 @@ jobs:
     - name: Deploy MetalLB
       run: |
         sudo juju add-model metallb-system
-        sudo juju deploy ./metallb-controller.charm
-        sudo juju deploy ./metallb-speaker.charm
+        sudo juju deploy ./metallb-controller.charm --resource metallb-controller-image='metallb/controller:v0.9.3'
+        sudo juju deploy ./metallb-speaker.charm --resource metallb-speaker-image='metallb/speaker:v0.9.3'
         sudo juju config metallb-controller iprange="10.1.240.240-10.1.240.241"
     
     - name: Wait for stable environment
