add upstream-source as reference for users

--- a/charms/metallb-controller/metadata.yaml
+++ b/charms/metallb-controller/metadata.yaml
@@ -21,3 +21,4 @@ resources:
   metallb-controller-image:
     type: oci-image
     description: upstream docker image for metallb-controller
+    upstream-source: 'metallb/controller:v0.9.3'
