--- a/.github/workflows/metallb-workflow.yaml
+++ b/.github/workflows/metallb-workflow.yaml
@@ -74,6 +74,7 @@ jobs:
         sudo snap install juju --classic
         sudo snap install charmcraft --beta
         sudo snap install juju-wait --classic
+        sudo snap install yq
     - name: Create tmp dir for artifacts
       run: mkdir -p tmp
     - name: Build charms
@@ -93,9 +94,11 @@ jobs:
       run: sudo juju bootstrap microk8s microk8s
     - name: Deploy MetalLB
       run: |
+        upstream_controller_image=$(yq r charms/metallb-controller/metadata.yaml 'resources.metallb-controller-image.upstream-source')
+        upstream_speaker_image=$(yq r charms/metallb-speaker/metadata.yaml 'resources.metallb-speaker-image.upstream-source')
         sudo juju add-model metallb-system
-        sudo juju deploy ./metallb-controller.charm --resource metallb-controller-image='metallb/controller:v0.9.3'
-        sudo juju deploy ./metallb-speaker.charm --resource metallb-speaker-image='metallb/speaker:v0.9.3'
+        sudo juju deploy ./metallb-controller.charm --resource metallb-controller-image=$upstream_controller_image
+        sudo juju deploy ./metallb-speaker.charm --resource metallb-speaker-image=$upstream_speaker_image
         sudo juju config metallb-controller iprange="10.1.240.240-10.1.240.241"
     - name: Wait for stable environment
       run: sudo /snap/bin/juju-wait
@@ -121,13 +124,13 @@ jobs:
     - name: Debug failures
       if: failure()
       run: |
-        sudo microk8s.kubectl get all -A > tmp/microk8s-status-all.txt
-        sudo microk8s.kubectl describe deployments -A > tmp/microk8s-deployments.txt
-        sudo microk8s.kubectl describe replicasets -A > tmp/microk8s-replicasets.txt
-        sudo microk8s.kubectl describe daemonsets -A > tmp/microk8s-daemonsets.txt
+        sudo microk8s.kubectl get all -A 2>&1 | tee tmp/microk8s-status-all.txt
+        sudo microk8s.kubectl describe deployments -A 2>&1 | tee tmp/microk8s-deployments.txt
+        sudo microk8s.kubectl describe replicasets -A 2>&1 | tee tmp/microk8s-replicasets.txt
+        sudo microk8s.kubectl describe daemonsets -A 2>&1 | tee tmp/microk8s-daemonsets.txt
         for pod in `sudo microk8s.kubectl get pods -n metallb-system | awk '{print$1}' | grep -v NAME`; 
-        do sudo microk8s.kubectl logs $pod -n metallb-system > tmp/pod-$pod-logs.txt; done
-        sudo snap logs -n 300 microk8s > tmp/snap-log-microk8s.txt
+        do sudo microk8s.kubectl logs $pod -n metallb-system 2>&1 | tee tmp/pod-$pod-logs.txt; done
+        sudo snap logs -n 300 microk8s 2>&1 | tee tmp/snap-log-microk8s.txt
     - name: Upload Artifacts
       if: ${{ always() }}
       uses: actions/upload-artifact@v2
@@ -147,6 +150,7 @@ jobs:
         sudo snap install juju --classic
         sudo snap install charmcraft --beta
         sudo snap install juju-wait --classic
+        sudo snap install yq
     - name: Create tmp dir for artifacts
       run: mkdir -p tmp
     - name: Build charms
@@ -166,9 +170,11 @@ jobs:
       run: sudo juju bootstrap microk8s microk8s
     - name: Deploy MetalLB
       run: |
+        upstream_controller_image=$(yq r charms/metallb-controller/metadata.yaml 'resources.metallb-controller-image.upstream-source')
+        upstream_speaker_image=$(yq r charms/metallb-speaker/metadata.yaml 'resources.metallb-speaker-image.upstream-source')
         sudo juju add-model metallb-system
-        sudo juju deploy ./metallb-controller.charm --resource metallb-controller-image='metallb/controller:v0.9.3'
-        sudo juju deploy ./metallb-speaker.charm --resource metallb-speaker-image='metallb/speaker:v0.9.3'
+        sudo juju deploy ./metallb-controller.charm --resource metallb-controller-image=$upstream_controller_image
+        sudo juju deploy ./metallb-speaker.charm --resource metallb-speaker-image=$upstream_speaker_image
         sudo juju config metallb-controller iprange="10.1.240.241-10.1.240.242"
     - name: Wait for stable environment
       run: sudo /snap/bin/juju-wait
@@ -207,13 +213,13 @@ jobs:
     - name: Debug failures
       if: failure()
       run: |
-        sudo microk8s.kubectl get all -A > tmp/microk8s-status-all.txt
-        sudo microk8s.kubectl describe deployments -A > tmp/microk8s-deployments.txt
-        sudo microk8s.kubectl describe replicasets -A > tmp/microk8s-replicasets.txt
-        sudo microk8s.kubectl describe daemonsets -A > tmp/microk8s-daemonsets.txt
+        sudo microk8s.kubectl get all -A 2>&1 | tee tmp/microk8s-status-all.txt
+        sudo microk8s.kubectl describe deployments -A 2>&1 | tee tmp/microk8s-deployments.txt
+        sudo microk8s.kubectl describe replicasets -A 2>&1 | tee tmp/microk8s-replicasets.txt
+        sudo microk8s.kubectl describe daemonsets -A 2>&1 | tee tmp/microk8s-daemonsets.txt
         for pod in `microk8s.kubectl get pods -n metallb-system | awk '{print$1}' | grep -v NAME`; 
-        do microk8s.kubectl logs $pod -n metallb-system > tmp/pod-$pod-logs.txt; done
-        sudo snap logs -n 300 microk8s > tmp/snap-log-microk8s.txt
+        do microk8s.kubectl logs $pod -n metallb-system 2>&1 | tee tmp/pod-$pod-logs.txt; done
+        sudo snap logs -n 300 microk8s 2>&1 | tee tmp/snap-log-microk8s.txt
     - name: Upload Artifacts
       if: ${{ always() }}
       uses: actions/upload-artifact@v2
