--- a/.github/workflows/metallb-workflow.yaml
+++ b/.github/workflows/metallb-workflow.yaml
@@ -41,7 +41,7 @@ jobs:
       run: |
         cd charms/metallb-controller
         tox -e unit
-  
+
   unit-test-metallb-speaker:
     name: Unit tests for charm metallb-speaker
     runs-on: ubuntu-latest
@@ -71,16 +71,14 @@ jobs:
       uses: actions/checkout@v2
     - name: Install dependencies
       run: |
+        script/bootstrap
         sudo snap install juju --classic
-        sudo snap install charmcraft --beta
         sudo snap install juju-wait --classic
-        sudo snap install yq
     - name: Create tmp dir for artifacts
       run: mkdir -p tmp
     - name: Build charms
       run: |
-        charmcraft build --from charms/metallb-controller
-        charmcraft build --from charms/metallb-speaker
+        make charms
     - name: Install MicroK8s with microk8s-action
       uses: balchua/microk8s-actions@v0.1.3
       with:
