--- a/docs/local-overlay.yaml
+++ b/docs/local-overlay.yaml
@@ -1,18 +1,13 @@
 description: |
   A local overlay to deploy the charms from this repo. This is meant for developers.
-  The appropriate steps to use this would be to :
+  The appropriate steps to use this would be to:
   1) pull the repo locally
   2) cd metallb-operator
-  2) build the charms with `tox -e build` 
+  2) build the charms with `make charms` 
   3) deploy with the overlay: 
-      `juju deploy ./bundle.yaml --overlay ./docs/local-overlay.yaml`
-bundle: kubernetes
+      `juju deploy ./bundle --overlay ./docs/local-overlay.yaml`
 applications:
   metallb-controller:
-    charm: ../charms/metallb-controller/build/metallb-controller.charm
-    resources:
-      metallb-controller-image: 'metallb/controller:v0.9.3'
+    charm: ./build/metallb-controller.charm
   metallb-speaker:
-    charm: ../charms/metallb-speaker/build/metallb-speaker.charm
-    resources:
-      metallb-speaker-image: 'metallb/speaker:v0.9.3'
+    charm: ./build/metallb-speaker.charm
