Fix relative paths in local overlay and make unzip less noisy

--- a/script/build
+++ b/script/build
@@ -7,4 +7,4 @@ export PATH=/snap/bin:$PATH
 mkdir -p "$CHARM_BUILD_DIR/$CHARM"
 CHARM_PATH="$(realpath "charms/$CHARM")"
 (cd "$CHARM_BUILD_DIR" && charmcraft build -f "$CHARM_PATH")
-unzip "$CHARM_BUILD_DIR/$CHARM.charm" -d "$CHARM_BUILD_DIR/$CHARM"
+unzip -q "$CHARM_BUILD_DIR/$CHARM.charm" -d "$CHARM_BUILD_DIR/$CHARM"
