--- a/docs/local-overlay.yaml
+++ b/docs/local-overlay.yaml
@@ -8,10 +8,10 @@ description: |
       `juju deploy ./bundle --overlay ./docs/local-overlay.yaml`
 applications:
   metallb-controller:
-    charm: ./build/metallb-controller.charm
+    charm: ../build/metallb-controller.charm
     resources:
       metallb-controller-image: 'metallb/controller:v0.9.3'
   metallb-speaker:
-    charm: ./build/metallb-speaker.charm
+    charm: ../build/metallb-speaker.charm
     resources:
       metallb-speaker-image: 'metallb/speaker:v0.9.3'
