--- a/.github/workflows/metallb-workflow.yaml
+++ b/.github/workflows/metallb-workflow.yaml
@@ -74,9 +74,9 @@ jobs:
       uses: balchua/microk8s-actions@v0.1.3
       with:
         channel: '1.18/stable'
-        rbac: ${{ format('{}', matrix.rbac == "with RBAC") }}
-        dns: 'true'
-        storage: 'true'
+        rbac: ${{ matrix.rbac == 'with RBAC' }}
+        dns: true
+        storage: true
     - name: Check out code
       uses: actions/checkout@v2
     - name: Install dependencies
@@ -97,13 +97,13 @@ jobs:
         sudo juju deploy ./bundle --overlay ./docs/local-overlay.yaml
         sudo juju config metallb-controller iprange="10.1.240.240-10.1.240.241"
     - name: Wait for model to error without RBAC rules
-      if: ${{ matrix.rbac == "with RBAC" }}
+      if: ${{ matrix.rbac == 'with RBAC' }}
       run: ! sudo /snap/bin/juju-wait -wv
     - name: Apply RBAC rules for operator pods
-      if: ${{ matrix.rbac == "with RBAC" }}
+      if: ${{ matrix.rbac == 'with RBAC' }}
       run: sudo microk8s.kubectl apply -f docs/rbac-permissions-operators.yaml
     - name: Resolve failures from RBAC
-      if: ${{ matrix.rbac == "with RBAC" }}
+      if: ${{ matrix.rbac == 'with RBAC' }}
       run: |
         sudo juju resolved metallb-controller/0
         sudo juju resolved metallb-speaker/0
